# DjangoTests

timesheet/: atividades_new.json  atividades_old.json  atividades_utf8.json  clientes.json  clientes_utf8.json  db.sqlite3  pyproject.toml  script.py  scriptclientes.py  scriptduration.py  servicos_utf8.json  usuarios.json  usuarios_utf8.json
timesheet/apps/admin_app/: planinha.py  urls.py  views.py
timesheet/apps/atividade_app/: admin.py  apps.py  endpoints.py  finalizador.py  forms.py  models.py  urls.py  views.py
timesheet/apps/atividade_app/migrations/: 0001_initial.py  0002_rename_ram_atividade_registroatividademodel_ram_atividade_and_more.py  0003_registroatividademodel_ram_periodo.py
timesheet/apps/base_app/: admin.py  apps.py  models.py  permissions.py  urls.py  views.py
timesheet/apps/base_app/management/commands/: finalize_long_activities.py
timesheet/apps/base_app/migrations/: 0001_initial.py  0002_periodo.py  0003_rename_periodo_periodo_nome.py
timesheet/apps/user_app/: urls.py  views.py
timesheet/core/: settings.py  urls.py
timesheet/static/admin/css/: graficos.css  relatorio.css
timesheet/static/login/css/: login.css
timesheet/static/partials/css/: NavAside.css
timesheet/static/user/css/: adicionar_atividade.css  minhas_atividades.css  modal.css  table.css
timesheet/templates/admin/: hub.html  relatorio.html
timesheet/templates/login/: logged_out.html  login.html  semAcesso.html
timesheet/templates/partials/: _aside.html  _header.html
timesheet/templates/theme/: base.html
timesheet/templates/user/: home.html  initial.html
