[tool.poetry]
name = "timesheet"
version = "0.1.0"
description = ""
authors = ["Vinicios <vorceek@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
plotly = "^6.0.0"
pytz = "^2025.1"
reportlab = "^4.3.0"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
psycopg2 = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "timesheet" }
]